--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <span>Entradas</span>
             <img src="./assets/income.svg" alt="Imagem de entradas" />
           </h3>
-          <p>R$ 5.000,00</p>
+          <p id="incomeDisplay">R$ 0,00</p>
         </div>
 
         <div class="card">
@@ -34,7 +34,7 @@
             <span>Saídas</span>
             <img src="./assets/expense.svg" alt="Imagem de saídas" />
           </h3>
-          <p>R$ 2.000,00</p>
+          <p id="expenseDisplay">R$ 0,00</p>
         </div>
 
         <div class="card total">
@@ -42,7 +42,7 @@
             <span>Total</span>
             <img src="./assets/total.svg" alt="Imagem de total" />
           </h3>
-          <p>R$ 3.000,00</p>
+          <p id="totalDisplay">R$ 0,00</p>
         </div>
       </section>
 
@@ -61,40 +61,17 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <td class="description">Luz</td>
-              <td class="expense">- R$ 500,00</td>
-              <td class="date">23/01/2021</td>
-              <td>
-                <img src="./assets/minus.svg" alt="Remover Transação" />
-              </td>
-            </tr>
-            <tr>
-              <td class="description">Criação de Website</td>
-              <td class="income">R$ 5.000,00</td>
-              <td class="date">24/01/2021</td>
-              <td>
-                <img src="./assets/minus.svg" alt="Remover Transação" />
-              </td>
-            </tr>
-            <tr>
-              <td class="description">Aluguel</td>
-              <td class="expense">- R$ 1.500,00</td>
-              <td class="date">26/01/2021</td>
-              <td>
-                <img src="./assets/minus.svg" alt="Remover Transação" />
-              </td>
-            </tr>
+            
           </tbody>
         </table>
       </section>
     </main>
 
-    <div class="modal-overlay active">
+    <div class="modal-overlay">
       <div class="modal">
         <div id="form">
           <h2>Nova Transação</h2>
-          <form action="">
+          <form action="" onsubmit="Form.submit(event)">
             <div class="input-group">
               <label class="sr-only" for="description">Descrição</label>
               <input
